Fix remaining vps-security-monitor references to tresk
- Updated all paths: /opt/tresk, /etc/tresk, /var/log/tresk
- Updated service names to tresk.service, tresk-deep-scan.timer, etc.
- Fixed config file paths
- Updated bootstrap.sh temp directory
- Fixed AGENTS.md documentation
- Set executable permissions on monitor.sh and Python scripts

--- a/config/config.conf
+++ b/config/config.conf
@@ -1,5 +1,5 @@
 # Tresk - VPS Security Monitor Configuration File
-# Location: /etc/vps-security-monitor/config.conf
+# Location: /etc/tresk/config.conf
 # Last Updated: 2025-02-20
 
 # =============================================================================
@@ -20,7 +20,7 @@ LOG_RETENTION_DAYS=30
 ENABLE_JSON_LOGGING="true"
 
 # Working directory
-WORK_DIR="/opt/vps-security-monitor"
+WORK_DIR="/opt/tresk"
 SIGNATURE_DB="${WORK_DIR}/signatures/threat_signatures.json"
 
 # =============================================================================
@@ -315,7 +315,7 @@ IONICE_PRIORITY=7
 
 # Backup critical files before modification
 BACKUP_ENABLED="true"
-BACKUP_DIR="/var/backups/vps-security-monitor"
+BACKUP_DIR="/var/backups/tresk"
 BACKUP_RETENTION_DAYS=7
 
 # =============================================================================
