Fix all code review issues and update URLs to p4ndish
Fixed issues from code review:
- Added Markdown escaping for Telegram messages (prevents API errors)
- Fixed SUID whitelist regex (escaped forward slashes)
- Added strict IP validation for blocklist downloads
- Optimized hidden process detection using associative arrays (O(1) lookup)
- Added timeout to web shell detection (30 seconds)
- Verified main() call exists at end of monitor.sh

Updated all GitHub URLs from yourusername to p4ndish:
- bootstrap.sh, install.sh, uninstall.sh
- All documentation files
- All systemd service files

--- a/config/config.conf
+++ b/config/config.conf
@@ -246,7 +246,7 @@ SYSTEM_SECURITY="true"
 
 # Check for SUID binaries
 SUID_CHECK="true"
-SUID_WHITELIST="/usr/bin/passwd|/usr/bin/sudo|/usr/bin/su|/usr/bin/mount|/usr/bin/umount|/usr/bin/chsh|/usr/bin/chfn|/usr/bin/newgrp|/usr/bin/gpasswd|/usr/bin/pkexec|/usr/bin/screen|/usr/bin/tmux"
+SUID_WHITELIST="\/usr\/bin\/passwd|\/usr\/bin\/sudo|\/usr\/bin\/su|\/usr\/bin\/mount|\/usr\/bin\/umount|\/usr\/bin\/chsh|\/usr\/bin\/chfn|\/usr\/bin\/newgrp|\/usr\/bin\/gpasswd|\/usr\/bin\/pkexec|\/usr\/bin\/screen|\/usr\/bin\/tmux"
 
 # Check for world-writable files
 WORLD_WRITABLE_CHECK="true"
