--- a/systemd/tresk-deep-scan.service
+++ b/systemd/tresk-deep-scan.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Tresk - Deep Security Scan
-Documentation=https://github.com/yourusername/tresk
+Documentation=https://github.com/p4ndish/tresk
 After=network.target
 
 [Service]
