--- a/systemd/tresk.service
+++ b/systemd/tresk.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Tresk - VPS Security Monitor
-Documentation=https://github.com/yourusername/tresk
+Documentation=https://github.com/p4ndish/tresk
 After=network.target auditd.service
 Wants=auditd.service
 
