Add Kimi K2 AI-powered threat analysis integration
New Features:
- ai_analyzer.py: AI module using Kimi K2 to analyze detected threats
- Reduces false positives by validating detections before alerting
- Quick local whitelist for known legitimate processes (kthreadd, systemd, etc.)
- PID-based heuristics (skip system processes < PID 100)
- AI provides confidence score and explanation for each detection
- Three AI modes: conservative, assisted, disabled

Configuration (in config.conf):
- AI_ANALYSIS_ENABLED: Enable/disable AI analysis
- KIMI_API_KEY: Your Kimi K2 API key
- AI_CONFIDENCE_THRESHOLD: Minimum confidence to trust AI (0.0-1.0)
- AI_MODE: conservative (AI must confirm), assisted (logs only), disabled

AI Analysis includes in Telegram alerts:
- AI verdict (threat/legitimate)
- Confidence score
- Explanation of why
- Source (AI, whitelist, or heuristic)

To use:
1. Get API key from https://platform.moonshot.cn/
2. Add KIMI_API_KEY to /etc/tresk/config.conf
3. Set AI_ANALYSIS_ENABLED=true
4. Restart tresk service

--- a/config/config.conf
+++ b/config/config.conf
@@ -28,10 +28,31 @@ SIGNATURE_DB="${WORK_DIR}/signatures/threat_signatures.json"
 # =============================================================================
 
 # Telegram Bot Configuration
-TELEGRAM_ENABLED="false"
+TELEGRAM_ENABLED="true"
 TELEGRAM_BOT_TOKEN=""
 TELEGRAM_CHAT_ID=""
 TELEGRAM_THREAD_ID=""  # Optional: for forum topics
+
+# =============================================================================
+# AI ANALYSIS SETTINGS (Kimi K2 Integration)
+# =============================================================================
+
+# Enable AI-powered threat analysis to reduce false positives
+AI_ANALYSIS_ENABLED="false"
+
+# Kimi K2 API Key (get from https://platform.moonshot.cn/)
+# This provides intelligent analysis of detected threats before alerting
+KIMI_API_KEY=""
+
+# AI Analysis Threshold - minimum confidence to trust AI decision (0.0 - 1.0)
+# Higher = more conservative, may miss some threats but fewer false positives
+AI_CONFIDENCE_THRESHOLD="0.75"
+
+# AI Analysis Mode:
+#   "conservative" - AI must confirm threat before alerting (reduces false positives)
+#   "assisted"     - AI analyzes but human decides (logs AI opinion)
+#   "disabled"     - No AI analysis (original behavior)
+AI_MODE="conservative"
 
 # Alert settings
 ALERT_CRITICAL="true"
