Add support for both Moonshot and Kimi Code APIs
- Made API URL configurable via KIMI_API_URL
- Made model configurable via KIMI_MODEL
- Supports KIMI_CODE_API_KEY as alternative to KIMI_API_KEY
- Default remains Moonshot API for backward compatibility
- Users can now choose their preferred API endpoint

--- a/config/config.conf
+++ b/config/config.conf
@@ -40,9 +40,21 @@ TELEGRAM_THREAD_ID=""  # Optional: for forum topics
 # Enable AI-powered threat analysis to reduce false positives
 AI_ANALYSIS_ENABLED="false"
 
-# Kimi K2 API Key (get from https://platform.moonshot.cn/)
-# This provides intelligent analysis of detected threats before alerting
+# Kimi API Key - Choose ONE of the following options:
+#
+# Option 1: Moonshot API (https://platform.moonshot.cn/)
+# KIMI_API_KEY="sk-your-moonshot-api-key"
+# KIMI_API_URL="https://api.moonshot.cn/v1/chat/completions"
+# KIMI_MODEL="kimi-k2-0712-preview"
+#
+# Option 2: Kimi Code API (https://www.kimi.com/code/console)
+# KIMI_API_KEY="sk-your-kimi-code-api-key"
+# KIMI_API_URL="https://api.kimi.com/v1/chat/completions"
+# KIMI_MODEL="kimi-k2-0712-preview"
+
 KIMI_API_KEY=""
+KIMI_API_URL="https://api.moonshot.cn/v1/chat/completions"
+KIMI_MODEL="kimi-k2-0712-preview"
 
 # AI Analysis Threshold - minimum confidence to trust AI decision (0.0 - 1.0)
 # Higher = more conservative, may miss some threats but fewer false positives
