Fix: Prevent Telegram spam by improving alert cooldown
Changes:
1. ALERT_COOLDOWN_CRITICAL: 0 -> 300 seconds (5 minutes)
   - Zero cooldown caused CRITICAL alerts to spam repeatedly
2. Other cooldowns increased: HIGH 600s, MEDIUM 1800s
3. Alert key now includes process details (title + details)
   - Prevents same alert for different processes sharing cooldown
   - Each unique process gets its own cooldown timer
4. Better debug logging showing remaining cooldown time

Previously:
- Same 'Cryptominer Detected' alert sent every scan
- CRITICAL alerts had no cooldown (0 seconds)
- All alerts with same title shared one cooldown

Now:
- Minimum 5 minutes between same process alerts
- Each process has independent cooldown
- Clearer debug messages

--- a/config/config.conf
+++ b/config/config.conf
@@ -81,9 +81,10 @@ WEEKLY_REPORT_DAY="Sunday"
 WEEKLY_REPORT_TIME="09:00"
 
 # Rate limiting (seconds between similar alerts)
-ALERT_COOLDOWN_CRITICAL=0
-ALERT_COOLDOWN_HIGH=60
-ALERT_COOLDOWN_MEDIUM=300
+# IMPORTANT: Set to at least 300 (5 minutes) to prevent spam
+ALERT_COOLDOWN_CRITICAL=300
+ALERT_COOLDOWN_HIGH=600
+ALERT_COOLDOWN_MEDIUM=1800
 ALERT_COOLDOWN_LOW=3600
 
 # =============================================================================
